--- a/JiaoBaoYun-hb/html/show/show-attended.html
+++ b/JiaoBaoYun-hb/html/show/show-attended.html
@@ -62,7 +62,7 @@
 								console.log("错误", err);
 							})
 						} else {
-							mui('#show-att').pullRefresh().endPulldown();
+//							mui('#show-att').pullRefresh().endPulldown();
 						}
 					}
 				},
