--- a/JiaoBaoYun-hb/html/micro-course/course-all.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-all.html
@@ -26,7 +26,7 @@
 			<div class="mui-scroll">
 				<div v-if="listData.length==0" class="" style="min-height:300px;text-align: center;padding-top: 20%;">
 					<img src="../../image/mine/invite_none_0.png" width="50%" height="auto">
-					<p style="margin: auto 0;padding-top: 10px;"><span v-if="!isRequired" class="mui-spinner"  style="vertical-align: center;width: 15px; height: 15px;margin-bottom: -4px;"></span>{{isRequired?'没有获取到课程~~':'数据加载中~~'}}</p>
+					<p style="margin: auto 0;padding-top: 10px;"><span v-if="!isRequired" class="mui-spinner" style="vertical-align: center;width: 15px; height: 15px;margin-bottom: -4px;"></span>{{isRequired?'没有获取到课程~~':'数据加载中~~'}}</p>
 				</div>
 				<!--数据列表-->
 				<ul v-show="listData.length>0" class="mui-table-view">
@@ -47,7 +47,7 @@
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
-		<script src="../../js/utils/vue.js"></script>
+		<script src="../../js/utils/vue.min.js"></script>
 		<script type="text/javascript">
 			var courseAll = new Vue({
 				el: "#course-all",
@@ -153,12 +153,18 @@
 				course_list.getData(courseInfo, function(data) {
 					addData(data);
 					mui("#course-all").pullRefresh().endPulldown();
+					mui("#course-all").pullRefresh().refresh(true);
 				}, function(err) {
 					mui("#course-all").pullRefresh().endPulldown();
+					mui("#course-all").pullRefresh().refresh(true);
 				})
 			}
 
 			function pullupRefresh() {
+				if(courseInfo.pageIndex > courseInfo.totalPage) {
+					mui('#course-all').pullRefresh().endPullupToRefresh(true);
+					return;
+				}
 				course_list.getData(courseInfo, function(data) {
 					addData(data);
 					mui("#course-all").pullRefresh().endPullupToRefresh();
