--- a/JiaoBaoYun-hb/html/micro-course/course-all.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-all.html
@@ -8,6 +8,7 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../../css/micro-course/course-list.css" />
+		<script src="../../js/utils/vue.min.js"></script>
 		<style>
 			.mui-slider-indicator {
 				margin-left: -10px;
@@ -20,40 +21,50 @@
 		</style>
 	</head>
 
-	<body>
+	<body style="background-color: white;">
 		<!--下拉刷新容器-->
-		<div id="course-all" class="mui-content mui-scroll-wrapper">
+		<div id="course-all" class="mui-content mui-scroll-wrapper" v-bind:class="{'background-white':listData.length==0}">
 			<div class="mui-scroll">
-				<div v-if="listData.length==0" class="" style="min-height:300px;text-align: center;padding-top: 20%;">
+				<div v-if="listData.length==0&&isRequired" class="" style="min-height:300px;text-align: center;padding-top: 20%;">
 					<img src="../../image/mine/invite_none_0.png" width="50%" height="auto">
-					<p style="margin: auto 0;padding-top: 10px;"><span v-if="!isRequired" class="mui-spinner" style="vertical-align: center;width: 15px; height: 15px;margin-bottom: -4px;"></span>{{isRequired?'没有获取到课程~~':'数据加载中~~'}}</p>
+					<p style="margin: auto 0;padding-top: 10px;">没有获取到课程~~</p>
 				</div>
 				<!--数据列表-->
-				<ul v-show="listData.length>0" class="mui-table-view">
-					<li v-for="li of listData" class="mui-table-view-cell" v-on:tap="jumpToPage(li)">
-						<div class="course-container">
-							<div class="img-container"><img class="course-img" v-bind:src='li.CoursePic' />
-								<span class="red-circle" v-bind:class="{'display-none':li.IsUpdate==0}"></span></div>
-							<div class="course-detail">
-								<div class="courseName-button">
-									<p class="course-name single-line">{{li.CourseName}}</p>
-									<button id="btn-focused" type="button" class="input-btn" v-bind:class="[li.IsFocus?'btn-focused':'btn-unfocus']" v-on:tap.stop="toggleFocus(li)">{{li.IsFocus?'已关注':'关注'}}</button>
+				<template v-else>
+					<ul  class="mui-table-view">
+						<li v-for="li of listData" class="mui-table-view-cell" v-on:tap="jumpToPage(li)">
+							<div class="course-container">
+								<div class="img-container"><img class="course-img" v-bind:src='li.CoursePic' />
+									<span class="red-circle" v-bind:class="{'display-none':li.IsUpdate==0}"></span></div>
+								<div class="course-detail">
+									<div class="courseName-button">
+										<p class="course-name single-line">{{li.CourseName}}</p>
+										<button id="btn-focused" type="button" class="input-btn" v-bind:class="[li.IsFocus?'btn-focused':'btn-unfocus']" v-on:tap.stop="toggleFocus(li)">{{li.IsFocus?'已关注':'关注'}}</button>
+									</div>
+									<p class="course-info double-line">{{li.SecName}}</p>
 								</div>
-								<p class="course-info double-line">{{li.SecName}}</p>
 							</div>
-						</div>
-					</li>
-				</ul>
+						</li>
+					</ul>
+				</template>
 			</div>
 		</div>
-		<script src="../../js/mui.min.js"></script>
-		<script src="../../js/utils/vue.min.js"></script>
+
 		<script type="text/javascript">
 			var courseAll = new Vue({
 				el: "#course-all",
 				data: {
 					listData: [],
 					isRequired: false
+				},
+				watch:{
+					listData:function(val){
+						if(val.length>0){
+							document.body.style.backgroundColor="transparent";
+						}else{
+							document.body.style.backgroundColor="white";
+						}
+					}
 				},
 				methods: {
 					isFocus: function(course) {
@@ -120,6 +131,7 @@
 				}
 			})
 		</script>
+		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/micro-course/course-list.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
@@ -163,6 +175,7 @@
 			function pullupRefresh() {
 				if(courseInfo.pageIndex > courseInfo.totalPage) {
 					mui('#course-all').pullRefresh().endPullupToRefresh(true);
+					mui('#course-all').pullRefresh().disablePullupToRefresh();
 					return;
 				}
 				course_list.getData(courseInfo, function(data) {
