--- a/JiaoBaoYun-hb/html/show/show-attended.html
+++ b/JiaoBaoYun-hb/html/show/show-attended.html
@@ -10,38 +10,39 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/show/show-list.css" rel="stylesheet" />
+		<script src="../../js/utils/vue.min.js"></script>
 	</head>
 
-	<body>
+	<body style="background-color:white;">
 		<!--下拉刷新容器-->
-		<div id="show-att" class="mui-content mui-scroll-wrapper">
+		<div id="show-att" class="mui-content mui-scroll-wrapper" v-bind:class="{'background-white':isAttended==0}">
 			<div class="mui-scroll">
 				<div v-if="isAttended==0" class="" style="min-height:300px;text-align: center;padding-top: 20%;">
 					<img src="../../image/mine/invite_none_0.png" width="50%" height="auto">
 					<p style="margin: auto 0;padding: 10px;">暂无关注的人~~</p>
 				</div>
 				<!--数据列表-->
-				<div v-else v-show="listData.length>0" class="show-list">
-					<div v-for="cardData of listData" class="mui-table-view cityNews-container">
-						<li v-for="(item,index) of cardData" class="mui-table-view-cell news-container" v-on:tap="jumpToPage(item)">
-							<div class="img-container news-img" v-bind:style="{'background-image':'url('+getBackImg(item,index)+')','background-position':'center','background-size':'cover','text-align':'center'}">
-								<img class="play-video" v-if="isVideo(item)" src="../../image/utils/playvideo.png" />
-							</div>
-							<div class="news-words">
-								<p class="news-title single-line">{{item.MsgTitle}}</p>
-								<div class="anthor-date">
-									<p class="news-anthor single-line">{{item.unick}}</p>
-									<p class="news-date">{{item.PublishDate}}</p>
+				<template v-else-if="isAttended&&listData.length>0">
+					<div class="show-list">
+						<div v-for="cardData of listData" class="mui-table-view cityNews-container">
+							<li v-for="(item,index) of cardData" class="mui-table-view-cell news-container" v-on:tap="jumpToPage(item)">
+								<div class="img-container news-img" v-bind:style="{'background-image':'url('+getBackImg(item,index)+')','background-position':'center','background-size':'cover','text-align':'center'}">
+									<img class="play-video" v-if="isVideo(item)" src="../../image/utils/playvideo.png" />
 								</div>
-							</div>
-						</li>
+								<div class="news-words">
+									<p class="news-title single-line">{{item.MsgTitle}}</p>
+									<div class="anthor-date">
+										<p class="news-anthor single-line">{{item.unick}}</p>
+										<p class="news-date">{{item.PublishDate}}</p>
+									</div>
+								</div>
+							</li>
+						</div>
 					</div>
-				</div>
+				</template>
 			</div>
 		</div>
-		<script src="../../js/mui.min.js"></script>
-		<script src="../../js/utils/events.js"></script>
-		<script src="../../js/utils/vue.min.js"></script>
+
 		<script type="text/javascript">
 			var showAtt = new Vue({
 				el: '#show-att',
@@ -51,7 +52,8 @@
 					isAttended: 0
 				},
 				watch: {
-					isAttended: function(val) {
+					isAttended: function(val, oldVal) {
+						console.log("isAttended当前界面:" + val + ",以前值" + oldVal);
 						if(val) {
 							showCity.pageIndex = 1;
 							show_list.getShowList(showCity, function(showCity, data) {
@@ -61,17 +63,11 @@
 							}, function(err) {
 								console.log("错误", err);
 							})
+							document.body.style.backgroundColor="transparent";
 						} else {
-							//							mui('#show-att').pullRefresh().endPulldown();
 						}
 					},
 					listData: function(val) {
-						console.log("监听展现关注的东东：",val);
-						if(val.length > 0) {
-							mui('#show-att').pullRefresh().enablePullupToRefresh();
-						} else {
-//							mui('#show-att').pullRefresh().disablePullupToRefresh();
-						}
 					}
 				},
 				methods: {
@@ -131,6 +127,8 @@
 				}
 			})
 		</script>
+		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/show/show-list.js"></script>
 		<script type="text/javascript">
@@ -183,6 +181,7 @@
 				console.log("上拉加载更多")
 				if(showCity.pageIndex > showCity.totalPage) {
 					mui('#show-att').pullRefresh().endPullupToRefresh(true);
+					mui('#show-att').pullRefresh().disablePullupToRefresh();
 					return;
 				}
 
@@ -197,9 +196,9 @@
 				})
 			}
 			mui.plusReady(function() {
-//				mui('#show-att').pullRefresh().disablePullupToRefresh();
+				//				mui('#show-att').pullRefresh().disablePullupToRefresh();
 				showAtt.detailReady = plus.webview.currentWebview().detailReady;
-				showAtt.isAttended = plus.webview.currentWebview().isAttended;
+				showAtt.isAttended = Number(plus.webview.currentWebview().isAttended);
 				console.log("showAtt.detailReady" + showAtt.detailReady);
 				setListener();
 			})
