学堂关闭发布展现功能

--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -50,7 +50,7 @@
 				<div class="mui-indicator mui-active"></div>
 				<div class="mui-indicator"></div>
 			</div>
-			<a id="publish-show" class="mui-pull-right">发布</a>
+			<a id="publish-show" class="mui-pull-right display-none">发布</a>
 		</header>
 		<!--底部选项卡（.mui-bar-tab）-->
 		<nav id="nav_tab" class="mui-bar mui-bar-tab">
