--- a/JiaoBaoYun-hb/html/micro-course/course-home.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-home.html
@@ -84,7 +84,7 @@
 				id: "course-attended.html",
 				url: "course-attended.html",
 				styles: {
-					top: '44px',
+					top: 0,
 					bottom: 0
 				},
 				extras: {}
@@ -93,7 +93,7 @@
 				id: "course-all.html",
 				url: "course-all.html",
 				styles: {
-					top: '44px',
+					top: 0,
 					bottom: 0
 				},
 				extras: {}
