--- a/JiaoBaoYun-hb/html/show/show-home.html
+++ b/JiaoBaoYun-hb/html/show/show-home.html
@@ -83,7 +83,7 @@
 				id: "show-attended.html",
 				url: "show-attended.html",
 				styles: {
-					top: '44px',
+					top: 0,
 					bottom: 0
 				},
 				extras: {}
@@ -92,7 +92,7 @@
 				id: "show-all.html",
 				url: "show-all.html",
 				styles: {
-					top: '44px',
+					top: 0,
 					bottom: 0
 				},
 				extras: {}
