--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -37,7 +37,7 @@
 				<span class="mui-icon iconfont icon-shangchuanyunduan"></span>
 				<span class="mui-tab-label">云盘</span>
 			</a>
-			<a id="tabclass" class="mui-tab-item" href="../sciedu/sciedu_home.html">
+			<a id="tabclass" class="mui-tab-item" href="../sciedu/sciedu-home.html">
 				<span class="mui-icon iconfont icon-jiaoyu1"></span>
 				<span class="mui-tab-label">科教</span>
 			</a>
