--- a/JiaoBaoYun-hb/html/sciedu/sciedu-home.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu-home.html
@@ -7,12 +7,24 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<style>
+			.mui-slider-indicator {
+				margin-left: -10px;
+				bottom: -3px;
+			}
+			
+			.mui-slider-indicator .mui-indicator {
+				margin: 1px 2px;
+			}
+		</style>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a id="changeCity" class="mui-icon mui-icon-list mui-pull-left"></a>
 			<h1 id="title" class="mui-title"></h1>
+			<div id="header-indicator" class="mui-slider-indicator display-none">
+			</div>
 		</header>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
@@ -40,7 +52,7 @@
 				//换人啦
 				window.addEventListener('infoChanged', function() {
 					console.log("*******sciedu-home.html获取的用户切换的监听");
-					cities=[];
+					cities = [];
 					requireFocusCities();
 				});
 				window.addEventListener("listReady", function(e) {
@@ -67,7 +79,7 @@
 					curIndex = 0;
 					if(!events.getUtid()) {
 						myStorage.setItem(storageKeyName.SECITY, cities);
-					}else if(cities.length===0){
+					} else if(cities.length === 0) {
 						addLocal();
 					}
 					addAll(); //
@@ -138,8 +150,25 @@
 			 */
 			function setTitle(index) {
 				document.getElementById("title").innerText = cities[index].aname;
+				createIndicator(index);
 			}
-
+			function createIndicator(index){
+				var indicator=document.getElementById("header-indicator");
+				if(cities.length<=1){
+					indicator.style.display="none";
+					return;
+				}
+				indicator.style.display="block";
+				indicator.innerHTML="";
+				for(var i=0;i<cities.length;i++){
+					var div=document.createElement("div");
+					div.className="mui-indicator";
+					if(i==index){
+						div.classList.add("mui-active");
+					}
+					indicator.appendChild(div);
+				}
+			}
 			function sendToSub() {
 				if(listReady) {
 					events.fireToPageNone("sciedu-list.html", "seCities", cities);
