--- a/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
+++ b/JiaoBaoYun-hb/html/sciedu/sciedu_show_main.html
@@ -18,7 +18,7 @@
 				background-color: white;
 				word-break: break-all;
 			}
-
+			
 			#news_title {
 				font-size: 21px;
 				color: #323232;
@@ -26,7 +26,7 @@
 				padding: 10px 10px 0px 10px;
 				/*background-color: wheat;*/
 			}
-
+			
 			#news_tips {
 				margin-top: 5px;
 				font-size: 12px;
@@ -34,7 +34,7 @@
 				text-align: center;
 				margin-bottom: 10px;
 			}
-
+			
 			img {
 				width: 100%;
 			}
@@ -58,13 +58,36 @@
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
-				events.fireToPageNone('sciedu-list.html','detailReady');
+				events.fireToPageNone('sciedu-list.html', 'detailReady');
 				setListeners();
 			});
-			function setListeners(){
-				window.addEventListener("scieduItemInfo",function(e){
-					console.log("list传过来的新闻信息:",e.detail.data);
+
+			function setListeners() {
+				window.addEventListener("scieduItemInfo", function(e) {
+					console.log("list传过来的新闻信息:", e.detail.data);
+					setConetent(e.detail.data);
 				})
+			}
+
+			function setConetent(item) {
+				document.getElementById("news_title").innerText = item.title;
+				document.getElementById("news_tips").innerText = item.tips;
+				var comData = {
+					top: '1', //每页行数，
+					vvl: item.acode + "|" + item.tabid, //查询的区域代码,省份截取城市代码前两位,城市截取城市代码的前4位
+					vvl1: '1' //页码,获取第几页
+				};
+				//45.通过区域代码获取对应区域的分页新闻
+				postDataPro_PostTnews(comData, null, function(data) {
+					//console.log('45 PostTnews ' + JSON.stringify(data));
+					if(data.RspCode == 0) {
+						if(data.RspData.dt[0] && data.RspData.dt[0].content != undefined && data.RspData.dt[0].content != null) {
+							document.getElementById("news_content").innerHTML = data.RspData.dt[0].content;
+						}
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				});
 			}
 		</script>
 	</body>
