0006311: 在微学界面 点击左上角头像进行注册（13256693450 已注册） 等录后 点击阅读 界面数据重复0805

--- a/JiaoBaoYun-hb/html/register/yanZhengMa.html
+++ b/JiaoBaoYun-hb/html/register/yanZhengMa.html
@@ -307,7 +307,7 @@
 												//跳转到主界面
 												//退出 界面更新
 												events.logOff();
-												events.infoChanged();
+//												events.infoChanged();
 												mui.fire(plus.webview.getWebviewById("index.html"), 'login');
 												events.hidePagesExIndex();
 												mui.back();
